fix Contact a overflow

--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -137,6 +137,6 @@
         fill:var(--main-mobile-color);
     }
     .Contacts a {
-        font-size: 1rem;
+        font-size: 0.9rem;
     }
 }
