--- a/src/container/Projects/Project/Project.module.css
+++ b/src/container/Projects/Project/Project.module.css
@@ -285,4 +285,7 @@
     .WhiteBulb path {
         fill: white;
     }
+    .ImageContainer{
+        min-width: unset;
+    }
 }
